src/components/layout.css
@import url("https://fonts.googleapis.com/css?family=Bebas+Neue");

:root {
  --mainBlue: #0152a0;
  --mainOrange: #f5b26a;
  --mainGrey: #a8acaf;
  --mainWhite: rgb(255, 255, 255);
  --mainDark: #000;
}

body {
  background: var(--mainWhite);
  color: var(--mainDark);
  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
}

/**Select arrow and dropdown arrow */
.custom-select {
  background: url("../images/chevron-down-solid.svg") no-repeat 30px/15px !important;
}

.dropdown-toggle:after {
  display: none;
}

/**More Padding styling */
.no-padding-sides {
  padding-right: 0 !important;
  padding-left: 0 !important;
}

.no-border-sides {
  border-left: 0 !important;
  border-right: 0 !important;
}

.py-6 {
  padding-top: 6rem !important;
  padding-bottom: 6rem !important;
}

.pt-6 {
  padding-top: 6rem !important;
}

.pt-6-5 {
  padding-top: 6.5rem !important;
}

.pt-7 {
  padding-top: 7rem !important;
}

.pt-8 {
  padding-top: 8rem !important;
}

.pt-9 {
  padding-top: 9rem !important;
}

.pt-10 {
  padding-top: 10rem !important;
}

.pr-6 {
  padding-right: 6rem !important;
}

.pl-6 {
  padding-left: 6rem !important;
}

.pr-7 {
  padding-right: 7rem !important;
}

.pl-7 {
  padding-left: 7rem !important;
}

.pb-6 {
  padding-bottom: 6rem !important;
}

/**FOOTER */
.footer {
  background: var(--mainWhite);
}

.footerFont {
  font-size: 80%;
}

.link-footer {
  color: var(--mainDark);
  padding-left: 0;
}

.headerFont {
  font-family: "Bebas Neue" !important;
  letter-spacing: 4px;
}

.iconFont {
  font-family: "Bebas Neue" !important;
  letter-spacing: 4px;
  font-size: 120%;
}

.iconSize {
  height: 50%;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

.text-white {
  color: var(--mainWhite);
}

.blue {
  color: var(--mainBlue);
}

.title {
  color: var(--mainDark);
  padding-right: 55%;
  padding-bottom: 25%;
}

.btn-blue {
  color: var(--mainBlue);
  border-color: var(--mainBlue);
}

.btn-blue:hover {
  background: var(--mainBlue);
  color: var(--mainWhite);
}

.stepHeaderFont {
  font-family: "Bebas Neue" !important;
  letter-spacing: 4px;
  font-size: 200%;
  color: var(--mainWhite);
  background-color: var(--mainBlue);
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.btn-step:focus {
  color: var(--mainBlue);
}

/** INDEX PAGE **/
.indexPagePicture {
  overflow-x: hidden !important;
  overflow-y: scroll !important;
}

/** RETREAD PAGE **/
.retreadTitle {
  font-family: "Bebas Neue" !important;
  letter-spacing: 8px;
  position: absolute;
  top: 3.5rem;
  left: 3.5rem;
  font-size: 3.5vw;
}

.retreadLine1 {
  position: absolute;
  top: 11rem;
  left: 3.5rem;
  width: 520px;
  font-size: 0.85vw;
}

.containerStyle {
  position: relative;
  color: var(--mainWhite);
}

.retreadQualitiesTitle {
  font-family: "Bebas Neue" !important;
  letter-spacing: 8px;
  color: var(--mainWhite);
  padding-top: 1.5rem;
  padding-left: 1.5rem;
  padding-bottom: 1rem;
  background: var(--mainBlue);
}

.retreadTitleTwo {
  font-family: "Bebas Neue" !important;
  letter-spacing: 5px;
  color: var(--mainGrey);
}

.logoSize {
  height: 80%;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.logoSizeTwo {
  height: 85%;
  width: 85%;
  margin-left: auto;
  margin-right: auto;
}
.logoSizeThree {
  height: 100%;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.centerHorizon {
  width: 100%;
}

.paddingSides {
  padding-left: 100px;
  padding-right: 100px;
}

.popoverChangesCrown {
  max-width: 800px !important;
  max-height: 800px !important;
}

.retreadGrandTotal {
  font-family: "Bebas Neue" !important;
  letter-spacing: 10px;
  color: var(--mainGrey);
}

/** MYTH PAGE **/

.mythTitle {
  font-family: "Bebas Neue" !important;
  letter-spacing: 5px;
  color: var(--mainGrey);
}

.mythSubtitle {
  font-family: "Bebas Neue" !important;
  letter-spacing: 3px;
  color: var(--mainWhite);
}

.mythBackground {
  background: linear-gradient(
    0deg,
    rgba(2, 81, 160, 255) 40%,
    rgba(190, 211, 230, 255) 100%
  );
  background-clip: content-box;
}

.mythSize {
  height: 35%;
  width: 35%;
  margin-left: auto;
  margin-right: auto;
}

.mythHeight {
  height: 725px;
}

/**Contact Section on Index Page */

.contact-us {
  background: var(--mainBlue);
  color: var(--mainWhite);
}

.contact-us-button-padding {
  padding-top: 0.5rem;
}

.contact-us-button {
  background-color: var(--mainGrey);
  color: var(--mainWhite);
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/**CONTACT */

.contactMapBackground {
  background-image: url("../images/contact_1.jpg");
  background-size: 100% auto;
  background-position: center top;
  height: 80vh;
  background-repeat: no-repeat;
}

.contactReferralBackground {
  background-image: url("../images/contact_2.jpg");
  background-size: 100% auto;
  background-position: center top;
  height: 70vh;
  background-repeat: no-repeat;
}

.listFont {
  font-size: 80% !important;
}

